--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
 <app-navbar></app-navbar>
-<app-productos></app-productos>
-<!--
-  <app-registro></app-registro>
-  <app-login></app-login>
--->
+<router-outlet></router-outlet>
 <app-footer></app-footer>
