Rutas añadidas a los botones de la pagina

--- a/src/app/general/login/login.component.html
+++ b/src/app/general/login/login.component.html
@@ -14,6 +14,6 @@
             <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña">
         </div>
         <br>
-        <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+        <button class="btn btn-primary" href="productos">Iniciar Sesión</button>
     </form>
 </div>
