--- a/src/app/compartida/navbar/navbar.component.html
+++ b/src/app/compartida/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-        <li><a class="navbar-brand" href="/home">Panaderia Don Juan</a></li>
+        <li><a class="navbar-brand" href="">Panaderia Don Juan</a></li>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/home">Inicio </a>
+                    <a class="nav-link" href="">Inicio </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/productos">Productos</a>
